# skill-guard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TASK-006-COMPLETION.md  adversarial-testing.json  plan-sqlite-backend.md  plan.md  plan_hybrid_logging_and_skill_compliance.md  pyproject.toml
.claude/: quality_log.jsonl
.claude-plugin/: plugin.json
.evidence/: gto-history-6ce6819753ab.jsonl  gto-history-703c17885846.jsonl  gto-history-9282c997614c.jsonl  gto-history-console_25684.jsonl  gto-history-f00b334fefcd.jsonl  gto-history-pytest_isolated.jsonl  gto-history-terminal_25684.jsonl  gto-history-unknown.jsonl  gto-results.json  premortem_t002_fixes_20260324.md
.in_use/: 34504
.state/: breadcrumb_test_minimal_duration.json  breadcrumb_test_minimal_pass.json  breadcrumb_test_standard_pass.json  breadcrumb_test_strict_fail.json  breadcrumb_test_strict_pass.json
docs/: README.md  architecture.md  migration-guide.md  performance.md  troubleshooting.md
hooks/: hooks.json
scripts/: install-dev.bat
skills/: __init__.py
tests/: _gen_phase2_v2.py  conftest.py  probe_hook_payload_logger.py  test_PreToolUse_skill_pattern_gate.py  test_StopHook_skill_execution_gate.py  test_action_authority_gate.py  test_atomic_write_gap.py  test_audit.py  test_auto_discovery_integration.py  test_benchmark.py  test_breadcrumb.py  test_breadcrumb_deprecated.py  test_breadcrumb_extended.py  test_breadcrumb_hooks_integration.py  test_breadcrumb_isolation.py  test_breadcrumb_log.py  test_cache.py  test_cache_empty_evict.py  test_command_intent_session_isolation.py  test_craft_lens_enforcer.py  test_craft_router.py  test_craft_state.py  test_create_run_blocking_io.py  test_database.py  test_dual_state_systems.py  test_enforcement.py  test_eval_bridge.py  test_exceptions.py  test_execution_hooks.py  test_execution_run.py  test_execution_runtime.py  test_execution_store.py  test_fidelity_tracker.py  test_frontmatter_exception_swallowing.py  test_frontmatter_validation.py  test_handle_pre_tool_use_characterization.py  test_hook_manifest_naming.py  test_import_deletion_guard.py  test_inference.py  (+36 more)
(+277 files in other folders)
