[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skill-guard"
version = "1.0.0"
description = "Universal skill auto-discovery and enforcement for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "CSF NIP", email = "noreply@csf.nip"},
]
keywords = [
    "claude-code",
    "claude-plugin",
    "claude-skill",
    "auto-discovery",
    "enforcement",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
all = ["skill-guard[dev,test]"]

[project.urls]
Homepage = "https://github.com/yourusername/skill-guard"
Documentation = "https://github.com/yourusername/skill-guard#readme"
Repository = "https://github.com/yourusername/skill-guard"
Issues = "https://github.com/yourusername/skill-guard/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_guard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/skill_guard --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line length handled by formatter

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
